--- a/app/globals.css
+++ b/app/globals.css
@@ -5,27 +5,24 @@
 
 :root {
 	--foreground-rgb: 0, 0, 0;
-	--background-start-rgb: 214, 219, 220;
-	--background-end-rgb: 255, 255, 255;
+	--background-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
 		--foreground-rgb: 255, 255, 255;
-		--background-start-rgb: 0, 0, 0;
-		--background-end-rgb: 0, 0, 0;
+		--background-rgb: 0, 0, 0;
 	}
 }
 
+html {
+	-ms-flex: 1; /* IE 10 */
+	flex: 1;
+}
 body {
 	padding: 1rem;
 	color: rgb(var(--foreground-rgb));
-	background: linear-gradient(
-			to bottom,
-			transparent,
-			rgb(var(--background-end-rgb))
-		)
-		rgb(var(--background-start-rgb));
+	background: rgb(var(--background-rgb));
 }
 
 @layer utilities {
